--- a/style.css
+++ b/style.css
@@ -17,7 +17,9 @@
   --text-color: #222;
   --white-alpha-color: rgba(255, 255, 255, 0.5);
   --black-alpha-color: rgba(0, 0, 0, 0.5);
-  --font: 'Poppins', sans-serif;;
+  --font: 'Poppins', sans-serif;
+  --max-width: 1200px;
+  --header-height: 4rem; 
 }
 
 /*** Reset ***/
@@ -90,12 +92,49 @@ h2 {
 
 
 /*** Components ***/
+ /* Menú */
+ .menu {
+  display: none;
+ }
 
 /*** Utilities (Helper Classes) ***/
 .box-shadow-1 {
   box-shadow: 0.25rem 0.25rem 1rem rgba(0, 0, 0, 0.25);
 }
 
+.container {
+  /* Container para que se centre siempre al llegar a su máxima anchura */
+  margin-left: auto;
+  margin-right: auto;
+  max-width: var(--max-width);
+}
+
+.none {
+  display: none;
+}
+
 /*** Site Styles (Styles of this project) ***/
+  /* First Mobile */
+  .header {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    z-index: 999;
+    padding: 1rem;
+    width: 100%;
+    height: var(--header-height);
+    background-color: var(--second-color);
+  }
 
+  .header > .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 
+  .logo a {
+    color: var(--first-color);
+    font-weight: bold;
+    font-size: 2rem;
+    text-decoration: none;
+  }
