--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
   --black-alpha-color: rgba(0, 0, 0, 0.5);
   --font: 'Poppins', sans-serif;
   --max-width: 1200px;
-  --header-height: 4rem; 
+  --header-height: 6rem; 
 }
 
 /*** Reset ***/
@@ -93,9 +93,51 @@ h2 {
 
 /*** Components ***/
  /* Menú */
- .menu {
-  display: none;
+
+ .menu-btn {
+    outline: thin solid var(--first-color);
+    border: 0;
+    cursor: pointer;
+    background-color: var(--second-color);
  }
+
+ .menu-btn svg {
+    fill: var(--first-color)
+ }
+
+ .menu {
+  position: fixed; /* En posicion: fixed, pierde sus propiedades de alto y ancho por lo cual le damos witdh 100% */
+  left: 0;
+  bottom: var(--header-height);
+  width: 100%;
+  background-color: var(--second-color);
+  display: flex;
+  flex-direction: column;
+  opacity: 0;
+  pointer-events: none; /* Para que algun elemento no tenga interactividad. como curosres pointer */
+  transition: opacity 1s ease;
+ }
+
+ .menu.is-active {
+  opacity: 1;
+  pointer-events: auto;
+ }
+
+ .menu a {
+  padding: 1rem;
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  color: var(--first-color);
+ }
+  
+ .menu a:hover {
+  color: var(--white-color);
+  background-color: var(--first-color);
+ }
+
+
 
 /*** Utilities (Helper Classes) ***/
 .box-shadow-1 {
