--- a/style.css
+++ b/style.css
@@ -90,8 +90,37 @@ h2 {
   line-height: 1.6;
  }
 
-
 /*** Components ***/
+
+ /* Progress Bar */
+  progress {
+    width: 100%;
+    height: 1rem;
+    background-color: var(--gray-color);
+  }
+  
+  progress::-webkit-progress-bar {
+    background-color: var(--gray-color); /* Da color a la barra progress el sobrante del porcentaje */
+  }
+  
+  progress::-webkit-progress-value {
+    background-color: var(--gray-dark-color); /* Da color a la barra progress al porcentaje */
+  }
+
+  progress::-moz-progress-value {
+    background-color: var(--gray-dark-color); /* Para Firefox */
+  }
+
+  .progress {
+    margin: 1rem auto;
+  }
+
+  .progress > p {
+    margin: 0;
+    display: flex;
+    justify-content: space-between;
+    font-size: .85rem;
+  }
 
  /* Hero Image */
   .hero-image {
