--- a/style.css
+++ b/style.css
@@ -92,36 +92,6 @@ h2 {
 
 /*** Components ***/
 
- /* Progress Bar */
-  progress {
-    width: 100%;
-    height: 1rem;
-    background-color: var(--gray-color);
-  }
-  
-  progress::-webkit-progress-bar {
-    background-color: var(--gray-color); /* Da color a la barra progress el sobrante del porcentaje */
-  }
-  
-  progress::-webkit-progress-value {
-    background-color: var(--gray-dark-color); /* Da color a la barra progress al porcentaje */
-  }
-
-  progress::-moz-progress-value {
-    background-color: var(--gray-dark-color); /* Para Firefox */
-  }
-
-  .progress {
-    margin: 1rem auto;
-  }
-
-  .progress > p {
-    margin: 0;
-    display: flex;
-    justify-content: space-between;
-    font-size: .85rem;
-  }
-
  /* Hero Image */
   .hero-image {
     background-image: var(--hero-image);
@@ -191,6 +161,76 @@ h2 {
   color: var(--white-color);
   background-color: var(--first-color);
  }
+
+ /****** MODAL *******/
+ .modal {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    z-index: 999;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: var(--black-alpha-color);
+    opacity: 0;
+    pointer-events: none;
+    transition: all 1s;
+ }
+
+ .modal-content {
+  position: relative;
+ }
+
+ .modal-close {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+ }
+
+ .modal-close svg {
+  width: 3rem;
+  height: 3rem;
+  fill: var(--first-color);
+ }
+
+ /* Es como una REGEX en css, que dice que en en el selctor modal tenemos un id que empieza por trabajo, con esto abre todas la modales para cada portfolio en este caso */
+ .modal[id|="trabajo"]:target {
+    opacity: 1;
+    pointer-events: auto;
+ }
+
+ /* Progress Bar */
+  progress {
+    width: 100%;
+    height: 1rem;
+    background-color: var(--gray-color);
+  }
+
+    progress::-webkit-progress-bar {
+      background-color: var(--gray-color); /* Da color a la barra progress el sobrante del porcentaje */
+    }
+
+    progress::-webkit-progress-value {
+      background-color: var(--gray-dark-color); /* Da color a la barra progress al porcentaje */
+    }
+
+    progress::-moz-progress-value {
+      background-color: var(--gray-dark-color); /* Para Firefox */
+    }
+
+    .progress {
+      margin: 1rem auto;
+    }
+
+    .progress > p {
+      margin: 0;
+      display: flex;
+      justify-content: space-between;
+      font-size: .85rem;
+    }
+
 
  @media screen and (min-width: 1024px) {
     .menu-btn {
@@ -358,7 +398,7 @@ h2 {
     color: var(--white-color);
     opacity: 0;
     pointer-events: none;
-    transition: all .5s ease-out;
+    transition: all 0.5s ease-in-out;
   }
   
   .portfolio-card:hover .portfolio-card-info {
@@ -382,8 +422,8 @@ h2 {
   .service-card svg {
     fill: var(--first-color);
     margin-bottom: 1.25rem;
-    height: 40px;
-    width: 40px;
+    height: 3rem;
+    width: 3rem;
   }
 
   .service-card h3 {
