--- a/style.css
+++ b/style.css
@@ -449,6 +449,28 @@ h2 {
     margin-bottom: 2rem;
   }
 
+  .contact-card {
+    margin: 1rem auto;
+    padding: 1rem;
+    border-radius: 6px;
+    width: 100%;
+    height: 144px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  .contact-card > svg {
+    width: 2rem;
+    height: 2rem;
+    fill: var(--first-color);
+  }
+
+  .contact-card > small {
+    margin-top: -1rem
+  }
+
   /* First Mobile */
   .header {
     position: fixed;
@@ -556,8 +578,24 @@ h2 {
     color: var(--title-color);
   }
 
+  .social-media a {
+    padding: 0 .4rem;
+    text-decoration: none;
+  }
+
+  .social-media svg {
+    width: 1.8rem;
+    height: 1.8rem;
+  }
+
   /* Tablet Version */
   @media screen and (min-width: 768px) {
+    .contact-cards {
+      display: grid;
+      grid-template-columns: repeat(2, 48%);
+      justify-content: space-between;
+    }
+
     .portfolio > .container {
       display: grid;
       grid-template-columns: repeat(2, 50%);
@@ -596,6 +634,10 @@ h2 {
       grid-template-columns: repeat(3, 30%);
       justify-content: space-between;
       align-content: center;
+    }
+
+    .contact-cards {
+      grid-template-columns: repeat(4, 24%);
     }
 
     .header {
