--- a/style.css
+++ b/style.css
@@ -93,7 +93,6 @@ h2 {
 /*** Components ***/
 
   /*** Carousel ***/
-
   /*animation */
   @keyframes carousel-slide {
     0% {
@@ -180,6 +179,92 @@ h2 {
     background-color: var(--gray-dark-color);
   }
 
+  /******* Contact Form *******/
+  .contact-form {
+    margin: 2rem auto;
+    padding: 1rem;
+    max-width: 800px;
+  }
+
+  .contact-form > * {
+    padding: .5rem;
+    margin: 1rem auto;
+    display: block;
+    width: 100%;
+  }
+
+  .contact-form input,
+  .contact-form textarea {
+    font-size: .85rem;
+    font-size: var(--font);
+  }
+
+  .contact-form input {
+    border: 0;
+    border-bottom: thin solid var(--gray-dark-color);
+    padding-left: 0;
+  }
+  
+  .contact-form textarea {
+    border: thin solid var(--gray-dark-color);
+    resize: none;
+  }
+
+  .contact-form input[type="submit"] {
+    margin-top: 0;
+    cursor: pointer;
+    transition: all .5s ease-out;
+  }
+
+  .contact-form input[type="submit"]:hover {
+    opacity: .75;
+  }
+
+  .contact-form *::placeholder {
+    color: var(--gray-dark-color);
+  }
+
+  .contact-form-response {
+    padding: 1rem;
+    width: 400px;
+    border-radius: 6px;
+    text-align: center;
+    background-color: var(--white-color);
+  }
+
+  .contact-form-response svg {
+    margin-top: 2rem;
+    width: 4rem;
+    height: 4rem;
+    fill: var(--first-color);
+  }
+
+  .modal#gracias:target {
+    opacity: 1;
+    pointer-events: auto;
+  }
+
+  @media screen and (min-width: 1024px) {
+    .contact-form {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      column-gap: 1rem;
+    }
+
+    .contact-form input,
+    .contact-form textarea {
+      font-size: 1rem;
+    }
+
+    .contact-form textarea,
+    .contact-form-loader { 
+      grid-column: span 2;
+    }
+
+    .contact-form input[type="submit"] {
+      margin-left: 0;
+    }
+  }
 
   /****** Hero Image *******/
   .hero-image {
@@ -444,7 +529,6 @@ h2 {
 
 
 /*** Site Styles (Styles of this project) ***/
-
   .about > article {
     margin-bottom: 2rem;
   }
