--- a/style.css
+++ b/style.css
@@ -555,6 +555,14 @@ h2 {
     margin-top: -1rem
   }
 
+  .footer {
+    margin-bottom: var(--header-height);
+    padding: 1.5rem;
+    text-align: center;
+    color: var(--white-color);
+    background-color: var(--third-color);
+  }
+
   /* First Mobile */
   .header {
     position: fixed;
@@ -722,6 +730,10 @@ h2 {
 
     .contact-cards {
       grid-template-columns: repeat(4, 24%);
+    }
+
+    .footer {
+      margin-bottom: 0;
     }
 
     .header {
